--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,draw_key_blank)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
+importFrom(grDevices,as.raster)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
 importFrom(grid,gList)
